adding asymmetric treatment; increase the number of interactions to 15'

--- a/coopetition_mturk/templates/coopetition_mturk/Decision.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Decision.html
@@ -8,9 +8,8 @@
 <p style="font-size:16px">Round {{ player.round_in_interaction }} </p>
 
 
-
 <p style="font-size:16px">
-    Out of the 10 points you have, please indicate the number of points you want to allocate to the
+    Out of the {{ player.endowment }} points you have, please indicate the number of points you want to allocate to the
     <i>Investment Account</i> and the <i>Rationing Account</i>.
     The rest of the points are kept to yourself.
 </p>
