--- a/payment_online/templates/payment_online/EndInfo.html
+++ b/payment_online/templates/payment_online/EndInfo.html
@@ -2,16 +2,32 @@
 {% load staticfiles otree %}
 
 {% block title %}
-   Payment Information
 {% endblock %}
 
 {% block content %}
 
-<p>This is the end of the experiment. </p>
+{% if qualified %}
+<p> <strong>
+    Payment Information
+</strong> </p>
 
-<div style="text-align:right">
-    {% next_button %}
-</div>
+<p>This is the end of the experiment. Thank you for your participation.</p>
+<p>Your flat payment fee is {{participation_fee}}.</p>
+<p>You bonus earnings in the experiment is {{experiment_payoff}}, which is {{payment}}.</p>
+<p><strong> You final payment of the experiment is  {{final_payment}}</strong> </p>
+
+<p>Your MTurk Woker ID is  {{ player.Workerid }}.</p>
+
+
+</br>
+<p><strong>IMPORTANT:</strong> Please provide the following participation code to the MTurk HIT in order to receive credit for
+taking the experiment. </p>
+<p style="text-align:center"> <strong> Your participation code: {{participant.code}}</strong> </p>
+
+{% else %}
+<p>This is the end of the experiment. </p>
+{% endif %}
+
 {% endblock %}
 
 {% block form %}
