--- a/coopetition_mturk/templates/coopetition_mturk/Breakdowns_template.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Breakdowns_template.html
@@ -10,6 +10,63 @@
     </script>
 </head>
 
+
+{% if player.condition == "Asm" and player.A == 0 %}
+<div>
+    <p>
+        Recall that your and the other participant’s earnings can be broken down as follows:
+    </p>
+    <table>
+        <tr>
+            <th></th>
+            <th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>
+            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
+        </tr>
+        <tr>
+            <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\( {{ player.endowment }}-x_1-y_1\)</td>
+            <td rowspan="2">\(\displaystyle \frac{x_1x_2}{2}\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}\frac{x_1 x_2}{2}+ {{ player.endowment }}-x_1-y_1\)</td>
+        </tr>
+        <tr>
+            <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\({{ player.other_endowment }}-x_2-y_2\)</td>
+            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}\frac{x_1 x_2}{2}+ {{ player.other_endowment }} -x_1-y_1\)</td>
+        </tr>
+    </table>
+    <br/>
+       <p>
+        In general, putting more points in the <i>Investment Account</i> (a higher \(x_1\))  <strong>generates a higher total return</strong>
+        , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\)) <strong>increases your share of the total return</strong>.
+    </p>
+</div>
+{% endif %}
+
+{% if player.condition == "Asm" and player.A == 60 %}
+<div>
+    <p>
+        Recall that your and the other participant’s earnings can be broken down as follows:
+    </p>
+    <table>
+        <tr>
+            <th></th>
+            <th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>
+            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
+        </tr>
+        <tr>
+            <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\( {{ player.endowment }}-x_1-y_1\)</td>
+            <td rowspan="2">\(\displaystyle \frac{x_1x_2}{2} + 60\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\frac{x_1 x_2}{2}+60)+ {{ player.endowment }}-x_1-y_1\)</td>
+        </tr>
+        <tr>
+            <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\({{ player.other_endowment }}-x_2-y_2\)</td>
+            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\frac{x_1 x_2}{2}+60)+ {{ player.other_endowment }} -x_1-y_1\)</td>
+        </tr>
+    </table>
+    <br/>
+       <p>
+        In general, putting more points in the <i>Investment Account</i> (a higher \(x_1\))  <strong>generates a higher total return</strong>
+        , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\)) <strong>increases your share of the total return</strong>.
+    </p>
+</div>
+{% endif %}
+
 {% if player.condition == "Det" and player.A == 0 %}
 <div>
     <p>
@@ -23,7 +80,7 @@
         </tr>
         <tr>
             <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>
-            <td rowspan="2">\(x_1x_2\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}x_1 x_2+10-x_1-y_1\)</td>
+            <td rowspan="2">\(\frac{1}{2}x_1x_2\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}x_1 x_2+10-x_1-y_1\)</td>
         </tr>
         <tr>
             <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>
