--- a/coopetition_mturk/templates/coopetition_mturk/Instructions_template.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Instructions_template.html
@@ -13,13 +13,45 @@
 <p style="text-align: center" style="font-size:16px">
     <strong><u>Summary of the Situation</u></strong>
 </p>
+
+{% if player.condition == "Asm" %}
 <div>
     <p>
-        In each round, you receive 10 points.
-        You need to decide the number of points put into an <strong>Investment Account</strong> (\(x_1\)) and a <strong>Rationing Account</strong> (\(y_1\)).
-        The rest of the points (\(10-x_1-y_1\)) are kept to yourself.
+        You are Player {{ player.role }}.
+        In each round, you receive {{ player.endowment }} points, and the other player receives {{ player.other_endowment }} points.
+        You need to decide the number of points put into an <strong>Investment Account</strong> (\(x_1\)) and
+        a <strong>Rationing Account</strong> (\(y_1\)).
+        The rest of the points are kept to yourself.
+    </p>
+    <p>
+    Suppose the other player put \(x_2\) points in the  Investment Account and \(y_2\) points in the Rationing Account.
+    </p>
+    <p>
+        {% if player.A == 0 %}
+        $$\text{Your Final Earnings} =  \underbrace{\frac{y_1}{y_1 + y_2} \frac{x_1 x_2}{2}}_{\text{earnings from the investment}} +
+        \underbrace{ {{ player.endowment }} -x_1-y_1}_{\text{points kept for oneself}}$$
+        {% endif %}
+        {% if player.A == 60 %}
+        $$\text{Your Final Earnings} =  \underbrace{\frac{y_1}{y_1 + y_2}(\frac{x_1 x_2}{2}+60)}_{\text{earnings from the investment}} +
+        \underbrace{ {{player.endowment }} -x_2-y_2}_{\text{points kept for oneself}}$$
+        {% endif %}
+    </p>
+    <p>
+        In general, putting more points in the <i>Investment Account</i> (a higher \(x_1\))  <strong>generates a higher total return</strong>
+        , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\)) <strong>increases your share of the total return</strong>.
     </p>
 </div>
+
+{% else %}
+<div>
+    <p>
+        In each round, you receive {{ player.endowment }} points.
+        You need to decide the number of points put into an <strong>Investment Account</strong> (\(x_1\)) and a <strong>Rationing Account</strong> (\(y_1\)).
+        The rest of the points (\({{ player.endowment }}-x_1-y_1\)) are kept to yourself.
+    </p>
+</div>
+
+
 
 
 {% if player.condition == "Det" %}
@@ -41,6 +73,7 @@
     </p>
 </div>
 {% endif %}
+
 
 
 {% if player.condition == "Fix"  %}
@@ -117,5 +150,5 @@
     </p>
 </div>
 {% endif %}
-
+{% endif %}
 {% endblock %}
