mturk worker id in advance, making payment possible even in the presence of errors

--- a/payment_online/templates/payment_online/EndInfo.html
+++ b/payment_online/templates/payment_online/EndInfo.html
@@ -16,7 +16,7 @@
 <p>You bonus earnings in the experiment is {{experiment_payoff}}, which is {{payment}}.</p>
 <p><strong> You final payment of the experiment is  {{final_payment}}</strong> </p>
 
-<p>Your MTurk Woker ID is  {{ player.Workerid }}.</p>
+<p>Your MTurk Woker ID is  {{ player.workerid }}.</p>
 
 
 </br>
