after an unknow fatal error occured, form the habit of frequent commits

--- a/coopetition_mturk/templates/coopetition_mturk/Breakdowns_template.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Breakdowns_template.html
@@ -80,7 +80,7 @@
         </tr>
         <tr>
             <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>
-            <td rowspan="2">\(\frac{1}{2}x_1x_2\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}x_1 x_2+10-x_1-y_1\)</td>
+            <td rowspan="2">\(x_1x_2\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}x_1 x_2+10-x_1-y_1\)</td>
         </tr>
         <tr>
             <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>
