--- a/coopetition_quiz/templates/coopetition_quiz/QuizResults.html
+++ b/coopetition_quiz/templates/coopetition_quiz/QuizResults.html
@@ -21,7 +21,7 @@
     </p>
     <p>
         If you successfully complete the experiment, you will for sure receive $1 as your payment.
-        Depending on your and the other participant's decision, you can also earn up to $5 as additional bonus.
+        Depending on your and the other participant's decision, you can also earn up to ${{ max_payment }} as additional bonus.
     </p>
     </div>
     {% else  %}
