--- a/survey_online/templates/survey_online/StartPage.html
+++ b/survey_online/templates/survey_online/StartPage.html
@@ -2,18 +2,17 @@
 {% load staticfiles otree %}
 
 {% block title %}
-    Please wait for the experiment to continue.
 {% endblock %}
 
 {% block content %}
 
 <p style="font-size:16px">
-    Before getting paid, please finish the following questionnaire.
+    Please complete the following questionnaire. Your bonus payment information will be shown after the survey.
  </p>
 
 
-{#    <div style="text-align:right">#}
-{#    {% next_button %}#}
-{#    </div>#}
+   <div style="text-align:right">
+   {% next_button %}
+   </div>
 
 {% endblock %}
