--- a/coopetition_quiz/templates/coopetition_quiz/StartPage.html
+++ b/coopetition_quiz/templates/coopetition_quiz/StartPage.html
@@ -22,6 +22,7 @@
 <p style="font-size:16px">
         This experiment consists of several part and will take approximately 30 minutes.
     We will now go through the instructions for Part I.
+    Basic arithmetic and algebra are helpful for you to understand the instructions.
 </p>
 
 <p style="font-size:16px">
@@ -33,7 +34,7 @@
 
     <p>
         If you successfully complete the experiment, you will for sure receive $1 as your payment.
-        Depending on your and the other participant's decision, you can also earn up to $5 as additional bonus.
+        Depending on your and the other participant's decision, you can also earn up to ${{ max_payment }} as additional bonus.
     </p>
 
     <div style="text-align:right">
