found out that the fatal error was caused by oTree. now ready

--- a/survey_online/templates/survey_online/StartPage.html
+++ b/survey_online/templates/survey_online/StartPage.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <p style="font-size:16px">
-    Please complete the following questionnaire. Your bonus payment information will be shown after the survey.
+    You will be prompted to complete some simple survey questions. Your bonus payment information will be shown after the survey.
  </p>
 
 
