experiment with 15 rounds in each part

--- a/coopetition_mturk/templates/coopetition_mturk/DecisionWaitPage.html
+++ b/coopetition_mturk/templates/coopetition_mturk/DecisionWaitPage.html
@@ -51,6 +51,12 @@ You have made the following allocation:
     </p>
 </div>
 
+    <p>
+       In the rare event that the experiment stays on this page for a long time (more than 2 minutes), the other participant may get disconnected.
+            In that case, you can submit the HIT using your MTurk worker ID and inform the requester by email.
+            What you have earned so far will be paid to you as bonus.
+    </p>
+
 <br/>
 {% include Constants.history_template %}
 
