--- a/coopetition_mturk/templates/coopetition_mturk/Instructions_template.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Instructions_template.html
@@ -126,16 +126,16 @@
     {% if player.A == 0 %}
     $$   \text{Total Return} =
     \begin{cases}
-    110, & \text{if random number} \le 100 \\
-    0, & \text{if random number} > 100
+    110, & \text{if random number} \le x_1x_2 \\
+    0, & \text{if random number} > x_1x_2
     \end{cases} $$
     {% endif %}
 
     {% if player.A == 60 %}
     $$   \text{Total Return} =
     \begin{cases}
-    170, & \text{if random number} \le 100 \\
-    60, & \text{if random number} > 100
+    170, & \text{if random number} \le x_1x_2 \\
+    60, & \text{if random number} > x_1x_2
     \end{cases} $$
     {% endif %}
     <p>
