--- a/otree_mturk_utils/templates/otree_mturk_utils/CustomWaitPage.html
+++ b/otree_mturk_utils/templates/otree_mturk_utils/CustomWaitPage.html
@@ -55,6 +55,9 @@
     <p style="display: none;" id="finish_text">
         If you decide to exit the study by clicking the above button, it may take up to 30 seconds to direct
         to the payment page, and the webpage may be temporarily down. It is normal. Please be patient.
+
+        If you have not been matched after 6 minutes, it is likely that no qualified participants can be matched with you.
+        In that case, please Exit the study. We will have more experimental sessions for you to participate in the future.
     </p>
 </form>
 
