--- a/coopetition_mturk/templates/coopetition_mturk/StartPage.html
+++ b/coopetition_mturk/templates/coopetition_mturk/StartPage.html
@@ -5,14 +5,17 @@
 {% endblock %}
 
 {% block content %}
-<div>
-    <p style="text-align:center">
-        <strong>
-            You have just been matched with another participant.
-        </strong>
+<div style="text-align:center">
+    <p >
+        You have just been matched with another participant.
     </p>
+    <p>
 
-    <p style="text-align:center">
+            You will interact with the same participant for <strong>
+            {{ Constants.interaction_length.0 }} rounds
+        </strong> in this part.
+    </p>
+    <p>
         <strong>
             {% if player.condition == "Asm" %}
             {% if player.id_in_group == 1 %} You are Player A. {% else %} You are Player B. {% endif %}
@@ -21,27 +24,24 @@
         </strong>
     </p>
 
-    <p style="font-size:16px">
-        Note: The experiment proceeds as fast as the slower participant.
-        The experiment can be finished quickly, if you keep focused and submit your decisions in a timely manner.
-    </p>
+    <!--<p style="font-size:16px">-->
+        <!--Note: The experiment proceeds as fast as the slower participant, so remember to submit your decisions in a timely manner.-->
+    <!--</p>-->
 
-    <p>
-        In order to make sure that the experiment does not take forever, we impose some time limit for the decision-making.
-        For the first 5 rounds, you have 1 minutes to reach your decision; after Round 5, you have 30 seconds to reach your decision.
-        <strong>If you do not submit your answer within the allocated time, the computer will randomly choose answers for you, and
-            you will not get paid for that round.</strong>
-    </p>
-    <p style="text-align:center">
-        <strong>Remember to submit once you reach your decision.
-            Your decision is submitted only after you click "Submit".</strong>
-    </p>
+    <!--<p>-->
+    <!--In order to make sure that the experiment does not take forever, we impose some time limit for the decision-making.-->
+    <!--For the first 5 rounds, you have 1 minutes to reach your decision; after Round 5, you have 30 seconds to reach your decision.-->
+    <!--If you do not submit your answer within the allocated time, the computer will randomly choose answers for you, and-->
+    <!--you will not get paid for that round.-->
+    <!--</p>-->
 
-
-    <p>
-        At the bottom of the page, there will be a history table showing all the decisions have been made by you and
-        the other participant.
-    </p>
+    <!--<p>-->
+    <!--<strong>-->
+    <!--NOTE: If the webpage become unresponsive for a long time (more than 3 minutes), the other participant may get disconnected.-->
+    <!--In that case, you can submit the HIT using your MTurk worker ID and inform the requester by email.-->
+    <!--What you have earned so far will be paid to you as bonus.-->
+    <!--</strong>-->
+    <!--</p>-->
 
 </div>
 <br/>
