adding in-class experiment for behavioral economics

--- a/coopetition_quiz/templates/coopetition_quiz/QuizInfo.html
+++ b/coopetition_quiz/templates/coopetition_quiz/QuizInfo.html
@@ -16,7 +16,8 @@ the experiment and will not receive any payment for the HIT.
 <p>The information and examples of the experiment are shown below to help you complete the quiz.</p>
 
 <p>
-<strong>You have at most 8 minutes to finish the quiz.</strong>
+<strong>You have at most 8 minutes to finish the quiz.</strong> You will not be able to participate in the experiment if you
+    do not get all the answers correct in 8 minutes.
 </p>
 {% endblock %}
 
