probability judgment for behavioral economics class

--- a/bret/templates/bret/Decision.html
+++ b/bret/templates/bret/Decision.html
@@ -16,6 +16,7 @@
 
 {# ****************************************************************************************************************** #}
 {# *** SCRIPTS *** #}
+{# *** SCRIPTS *** #}
 {# ****************************************************************************************************************** #}
 {% block scripts %}
     <script src="{% static 'bret/js/angular.min.js' %}"></script>
@@ -59,7 +60,7 @@
 {# *** TITLE *** #}
 {# ****************************************************************************************************************** #}
 {% block title %}
-    {% trans "Your Decision" %}
+
 {% endblock %}
 
 
@@ -67,6 +68,12 @@
 {# *** CONTENT *** #}
 {# ****************************************************************************************************************** #}
 {% block content %}
+<p>
+{% if Constants.num_rounds > 1 %}
+Round {{ player.round_number }} of {{ Constants.num_rounds}}
+{% endif %}
+</p>
+
     <div class="panel panel-primary">
             <div
                 id="bomb-task"
