--- a/questions/templates/questions/redwood.html
+++ b/questions/templates/questions/redwood.html
@@ -14,7 +14,7 @@
 <div class="container" style="alignment:center">
     <div class="row">
         <div class="col-sm-10">
-            Is the height of the tallest redwood more or less than {{ player.redwood_anchor}} meters? </div>
+            Is the height of the tallest redwood more than {{ player.redwood_anchor}} meters? </div>
         <div class="col-sm-2"> {% formfield player.redwood_yes label=""  %} </div>
     </div>
     <hr>
