--- a/questions/templates/questions/AUN.html
+++ b/questions/templates/questions/AUN.html
@@ -14,7 +14,7 @@
 <div class="container" style="alignment:center">
     <div class="row">
         <div class="col-sm-10">
-            Is the percentage of African nations among UN members larger or smaller than {{ player.AUN_anchor}}? </div>
+            Is the percentage of African nations among UN members larger than {{ player.AUN_anchor}}? </div>
         <div class="col-sm-2"> {% formfield player.AUN_yes label=""  %} </div>
     </div>
     <hr>
